# dig-block

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.claude/skills/repomix/: SKILL.md
.cursor/rules/: documentation-and-comments.mdc  gitnexus.mdc  repomix.mdc  tests-layout.mdc
.github/workflows/: publish.yml
docs/prompt/: prompt.md  start.md
docs/prompt/tools/: gitnexus.md  repomix.md
docs/requirements/: IMPLEMENTATION_ORDER.md  README.md  REQUIREMENTS_REGISTRY.yaml  SCHEMA.md
docs/requirements/domains/attestation/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/attestation/specs/: ATT-001.md  ATT-002.md  ATT-003.md  ATT-004.md  ATT-005.md
docs/requirements/domains/block_production/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/block_production/specs/: BLD-001.md  BLD-002.md  BLD-003.md  BLD-004.md  BLD-005.md  BLD-006.md  BLD-007.md
docs/requirements/domains/block_types/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/block_types/specs/: BLK-001.md  BLK-002.md  BLK-003.md  BLK-004.md  BLK-005.md  BLK-006.md  BLK-007.md
docs/requirements/domains/checkpoint/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/checkpoint/specs/: CKP-001.md  CKP-002.md  CKP-003.md  CKP-004.md  CKP-005.md  CKP-006.md
docs/requirements/domains/crate_structure/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/crate_structure/specs/: STR-001.md  STR-002.md  STR-003.md  STR-004.md  STR-005.md
docs/requirements/domains/error_types/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/error_types/specs/: ERR-001.md  ERR-002.md  ERR-003.md  ERR-004.md  ERR-005.md
docs/requirements/domains/execution_validation/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/execution_validation/specs/: EXE-001.md  EXE-002.md  EXE-003.md  EXE-004.md  EXE-005.md  EXE-006.md  EXE-007.md  EXE-008.md  EXE-009.md
docs/requirements/domains/hashing/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/hashing/specs/: HSH-001.md  HSH-002.md  HSH-003.md  HSH-004.md  HSH-005.md  HSH-006.md  HSH-007.md  HSH-008.md
docs/requirements/domains/receipt/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/receipt/specs/: RCP-001.md  RCP-002.md  RCP-003.md  RCP-004.md
docs/requirements/domains/serialization/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/serialization/specs/: SER-001.md  SER-002.md  SER-003.md  SER-004.md  SER-005.md
docs/requirements/domains/state_validation/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/state_validation/specs/: STV-001.md  STV-002.md  STV-003.md  STV-004.md  STV-005.md  STV-006.md  STV-007.md
docs/requirements/domains/structural_validation/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/structural_validation/specs/: SVL-001.md  SVL-002.md  SVL-003.md  SVL-004.md  SVL-005.md  SVL-006.md
docs/resources/: SPEC.md
src/: constants.rs  error.rs  hash.rs  lib.rs  merkle_util.rs  primitives.rs  traits.rs
src/builder/: block_builder.rs  checkpoint_builder.rs  mod.rs
src/types/: attested.rs  block.rs  checkpoint.rs  header.rs  mod.rs  receipt.rs  signer_bitmap.rs  status.rs
src/validation/: execution.rs  mod.rs  state.rs  structural.rs
tests/: common.rs  str_001_tests.rs  str_002_tests.rs  str_003_tests.rs  str_004_tests.rs  str_005_tests.rs  test_attested_block_constructor.rs  test_bld_001_builder_struct_constructor.rs  test_bld_002_add_spend_bundle_budget.rs  test_bld_003_add_slash_proposal_limits.rs  test_bld_004_optional_setters.rs  test_bld_005_build_pipeline.rs  test_bld_006_block_signer_integration.rs  test_bld_007_builder_validity_guarantee.rs  test_block_error_execution_state.rs  test_block_error_structural.rs  test_builder_error.rs  test_checkpoint_builder.rs  test_checkpoint_error.rs  test_exe_001_validate_execution_api.rs  test_exe_002_puzzle_hash_verification.rs  test_exe_003_clvm_delegation.rs  test_exe_004_condition_parsing.rs  test_exe_005_bls_delegation.rs  test_exe_006_fee_consistency.rs  test_exe_007_cost_consistency.rs  test_exe_008_execution_result.rs  test_exe_009_pending_assertion.rs  test_hsh_001_block_header_hash.rs  test_hsh_002_checkpoint_hash.rs  test_hsh_003_spends_root.rs  test_hsh_004_additions_root.rs  test_hsh_005_removals_root.rs  test_hsh_006_filter_hash.rs  test_hsh_007_tagged_merkle.rs  test_hsh_008_receipts_root.rs  test_l2_block_header_constructors.rs  test_primitive_types.rs  test_public_api_smoke.rs  test_receipt_error.rs  (+29 more)
tests/attestation/: test_attested_block_methods.rs  test_block_status.rs  test_signer_bitmap_core.rs  test_signer_bitmap_merge.rs
tests/block_types/: test_l2_block_header_struct.rs  test_l2_block_helpers.rs  test_l2_block_struct.rs  test_protocol_constants.rs
tests/checkpoint/: test_checkpoint_score.rs  test_checkpoint_status.rs  test_checkpoint_struct.rs  test_checkpoint_submission_methods.rs  test_checkpoint_submission_struct.rs
tests/common/: mod.rs
tests/error_types/: test_block_error_structural.rs
tests/receipt/: test_receipt_list_aggregates.rs  test_receipt_status.rs
