[package]
name = "dig-block"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "DIG L2 block format, production, and validation"
license = "MIT"
authors = ["DIG Network"]
repository = "https://github.com/DIG-Network/dig-block"
# Only explicit `[[test]]` targets run as integration tests; `tests/common.rs` is a submodule (not its own crate).
autotests = false

[lib]
path = "src/lib.rs"

[dependencies]
# Chia protocol & consensus
chia-protocol = "0.26"
chia-bls = "0.26"
chia-consensus = "0.26"
chia-sha2 = "0.26"
chia-traits = "0.26"
clvm-utils = "0.26"
clvmr = "0.14"

# Chia SDK
chia-sdk-types = "0.30"
chia-sdk-signer = "0.30"

# DIG ecosystem
dig-clvm = "0.1"

# Serialization
bincode = "1"
serde = { version = "1", features = ["derive"] }

# Merkle / BIP158 (BLK-004): Bitcoin-compatible GCS filter writer, ordered puzzle_hash groups
bitcoin = { version = "0.32", default-features = false, features = ["std"] }
indexmap = "2"

# Error handling
thiserror = "2"

[dev-dependencies]
bincode = "1"
chia-sha2 = "0.26"
hex = "0.4.3"
hex-literal = "0.4"

# BLK-005: dedicated integration test crate (flat `tests/` path; see spec test plan).
[[test]]
name = "blk_005_protocol_constants"
path = "tests/test_protocol_constants.rs"

# BLK-006: primitive types & re-exports.
[[test]]
name = "blk_006_primitive_types"
path = "tests/test_primitive_types.rs"

# BLK-001: L2BlockHeader struct & derives.
[[test]]
name = "blk_001_l2_block_header_struct"
path = "tests/test_l2_block_header_struct.rs"

# BLK-002: L2BlockHeader constructors.
[[test]]
name = "blk_002_l2_block_header_constructors"
path = "tests/test_l2_block_header_constructors.rs"

# BLK-007: version auto-detection.
[[test]]
name = "blk_007_version_auto_detection"
path = "tests/test_version_auto_detection.rs"

# BLK-003: L2Block struct (header + body + signature).
[[test]]
name = "blk_003_l2_block_struct"
path = "tests/test_l2_block_struct.rs"

# BLK-004: L2Block helper methods (Merkle roots, filter, integrity).
[[test]]
name = "blk_004_l2_block_helpers"
path = "tests/test_l2_block_helpers.rs"

# ATT-003: BlockStatus enum and predicates.
[[test]]
name = "att_003_block_status"
path = "tests/test_block_status.rs"

# ATT-004: SignerBitmap core methods.
[[test]]
name = "att_004_signer_bitmap_core"
path = "tests/test_signer_bitmap_core.rs"

# ATT-005: SignerBitmap merge and signer_indices.
[[test]]
name = "att_005_signer_bitmap_merge"
path = "tests/test_signer_bitmap_merge.rs"

# ATT-001: AttestedBlock struct and constructor.
[[test]]
name = "att_001_attested_block_constructor"
path = "tests/test_attested_block_constructor.rs"

# ATT-002: AttestedBlock methods (signing_percentage, has_soft_finality, hash).
[[test]]
name = "att_002_attested_block_methods"
path = "tests/test_attested_block_methods.rs"

# RCP-001: ReceiptStatus enum (repr u8, discriminants).
[[test]]
name = "rcp_001_receipt_status"
path = "tests/test_receipt_status.rs"

# RCP-002: Receipt struct (seven fields).
[[test]]
name = "rcp_002_receipt_struct"
path = "tests/test_receipt_struct.rs"

# RCP-003: ReceiptList methods and Merkle root.
[[test]]
name = "rcp_003_receipt_list_methods"
path = "tests/test_receipt_list_methods.rs"

# RCP-004: ReceiptList aggregate methods.
[[test]]
name = "rcp_004_receipt_list_aggregates"
path = "tests/test_receipt_list_aggregates.rs"

# CKP-003: CheckpointStatus enum (epoch lifecycle).
[[test]]
name = "ckp_003_checkpoint_status"
path = "tests/test_checkpoint_status.rs"

# CKP-001: Checkpoint struct and new().
[[test]]
name = "ckp_001_checkpoint_struct"
path = "tests/test_checkpoint_struct.rs"

# CKP-002: CheckpointSubmission struct and new().
[[test]]
name = "ckp_002_checkpoint_submission_struct"
path = "tests/test_checkpoint_submission_struct.rs"

# CKP-004: Checkpoint::compute_score.
[[test]]
name = "ckp_004_checkpoint_score"
path = "tests/test_checkpoint_score.rs"

# CKP-005: CheckpointSubmission methods (hash, epoch, threshold, L1 record).
[[test]]
name = "ckp_005_checkpoint_submission_methods"
path = "tests/test_checkpoint_submission_methods.rs"

# CKP-006: CheckpointBuilder (epoch summary accumulation + Merkle roots).
[[test]]
name = "ckp_006_checkpoint_builder"
path = "tests/test_checkpoint_builder.rs"

# ERR-001: BlockError structural (Tier 1) variants.
[[test]]
name = "err_001_block_error_structural"
path = "tests/test_block_error_structural.rs"

# ERR-002: BlockError execution (Tier 2) and state (Tier 3) variants.
[[test]]
name = "err_002_block_error_execution_state"
path = "tests/test_block_error_execution_state.rs"

# ERR-003: CheckpointError enum.
[[test]]
name = "err_003_checkpoint_error"
path = "tests/test_checkpoint_error.rs"

# ERR-004: BuilderError enum.
[[test]]
name = "err_004_builder_error"
path = "tests/test_builder_error.rs"

# ERR-005: SignerBitmapError enum.
[[test]]
name = "err_005_signer_bitmap_error"
path = "tests/test_signer_bitmap_error.rs"

# ERR-005: ReceiptError enum.
[[test]]
name = "err_005_receipt_error"
path = "tests/test_receipt_error.rs"

# HSH-007: tagged Merkle hashing (0x01 leaf, 0x02 node) vs chia-sdk-types MerkleTree.
[[test]]
name = "hsh_007_tagged_merkle"
path = "tests/test_hsh_007_tagged_merkle.rs"

# HSH-001: L2BlockHeader hash (SHA-256 over SPEC §3.1 preimage).
[[test]]
name = "hsh_001_block_header_hash"
path = "tests/test_hsh_001_block_header_hash.rs"

# HSH-002: Checkpoint hash (SHA-256 over SPEC §3.2 preimage).
[[test]]
name = "hsh_002_checkpoint_hash"
path = "tests/test_hsh_002_checkpoint_hash.rs"

# STR-*: one integration test binary per requirement (`autotests = false`).
[[test]]
name = "str_001_cargo_dependencies"
path = "tests/test_str_001_cargo_dependencies.rs"

[[test]]
name = "str_002_module_hierarchy"
path = "tests/test_str_002_module_hierarchy.rs"

[[test]]
name = "str_003_public_reexports"
path = "tests/test_str_003_public_reexports.rs"

[[test]]
name = "str_004_coin_lookup_block_signer"
path = "tests/test_str_004_coin_lookup_block_signer.rs"

[[test]]
name = "str_005_test_infrastructure"
path = "tests/test_str_005_test_infrastructure.rs"
